package com.example.apphuerta_grupo4.ui.screens

import androidx.compose.foundation.layout.*
import androidx.compose.material3.*
import androidx.compose.runtime.Composable
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import com.example.apphuerta_grupo4.navigation.Screen
import com.example.apphuerta_grupo4.ui.shared.AppScaffold
import com.example.apphuerta_grupo4.viewmodels.MainViewModel
import com.example.apphuerta_grupo4.viewmodels.UsuarioViewModel
import androidx.compose.foundation.rememberScrollState
import androidx.compose.foundation.verticalScroll

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun PaginaRegistro(
    viewModel: MainViewModel,
    usuarioViewModel: UsuarioViewModel
) {
    val estado by usuarioViewModel.estado.collectAsState()

    AppScaffold(
        viewModel = viewModel,
        currentScreen = Screen.Registro
    ) { innerPadding ->
        Column(
            Modifier
                .padding(innerPadding)
                .fillMaxSize()
                .padding(16.dp)
                .verticalScroll(rememberScrollState())
                .testTag("registro_contenedor"),
            verticalArrangement = Arrangement.spacedBy(12.dp)
        ) {
            if (!estado.aceptaTerminos) {

                //Campo Nombres:
                OutlinedTextField(
                    value = estado.nombres,
                    onValueChange = usuarioViewModel::onNombresChange,
                    label = { Text("Nombres") },
                    isError = estado.errores.nombres != null,
                    supportingText = {
                        estado.errores.nombres?.let {
                            Text(it, color = MaterialTheme.colorScheme.error, modifier = Modifier.testTag("error_nombres"))
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("campo_nombres")
                )

                //Campo Apellidos
                OutlinedTextField(
                    value = estado.apellidos,
                    onValueChange = usuarioViewModel::onApellidosChange,
                    label = { Text("Apellidos") },
                    isError = estado.errores.apellidos != null,
                    supportingText = {
                        estado.errores.apellidos?.let {
                            Text(it, color = MaterialTheme.colorScheme.error, modifier = Modifier.testTag("error_apellidos"))
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("campo_apellidos")
                )

                //Campo correo
                OutlinedTextField(
                    value = estado.correo,
                    onValueChange = usuarioViewModel::onCorreoChange,
                    label = { Text("Correo Electronico") },
                    isError = estado.errores.correo != null,
                    supportingText = {
                        estado.errores.correo?.let {
                            Text(it, color = MaterialTheme.colorScheme.error, modifier = Modifier.testTag("error_correo"))
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("campo_correo")
                )

                //Campo clave
                OutlinedTextField(
                    value = estado.clave,
                    onValueChange = usuarioViewModel::onClaveChange,
                    label = { Text("Contraseña") },
                    isError = estado.errores.clave != null,
                    supportingText = {
                        estado.errores.clave?.let {
                            Text(it, color = MaterialTheme.colorScheme.error, modifier = Modifier.testTag("error_clave"))
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("campo_clave")
                )

                //Campo Direccion
                OutlinedTextField(
                    value = estado.direccion,
                    onValueChange = usuarioViewModel::onDireccionChange,
                    label = { Text("Dirección") },
                    isError = estado.errores.direccion != null,
                    supportingText = {
                        estado.errores.direccion?.let {
                            Text(it, color = MaterialTheme.colorScheme.error, modifier = Modifier.testTag("error_direccion"))
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("campo_direccion")
                )
                //Boton Enviar y aceptar terminos
                Button(
                    onClick = {
                        if (usuarioViewModel.validarFormulario()) {
                            usuarioViewModel.onAceptarTerminosChange(valor = true)
                            viewModel.navigateTo(Screen.ResumenCuenta)
                        }
                    },
                    modifier = Modifier.fillMaxWidth().testTag("boton_registrar")
                ) {
                    Text("Aceptar terminos e condiciones y registrar cuenta")
                }
            }else {
                Text(
                    text = "Ya has sido registrado",
                    style = MaterialTheme.typography.bodyLarge,
                    color = MaterialTheme.colorScheme.error,
                    modifier = Modifier.align(Alignment.CenterHorizontally).testTag("mensaje_registrado")
                        .padding(innerPadding)
                )
            }
        }
    }
}
