...
                    onClick = {
                        scope.launch { drawerState.close() }
                        viewModel.navigateTo(Screen.Productos)
                    }
                )
                NavigationDrawerItem(
                    label = { Text("Registro") },
                    selected = currentScreen == Screen.Registro,
                    onClick = {
                        scope.launch { drawerState.close() }
                        viewModel.navigateTo(Screen.Registro)
                    }
                )
...
                    title = { Text(text = "Tienda Huerto Hogar") },
                    navigationIcon = {
                        IconButton(
                            onClick = {
                                scope.launch { drawerState.open() }
                            },
                            modifier = Modifier.testTag("boton_menu")
                        ) {
                            Icon(imageVector = Icons.Default.Menu, contentDescription = "Menú")
                        }
                    }
                )
            }
...
