...
    fun validarFormulario(): Boolean {
        val estadoActual = _estado.value
        val errores = UsuarioErrores(
            nombres = if (estadoActual.nombres.isBlank()) "Campo obligatorio" else null,
            apellidos = if (estadoActual.apellidos.isBlank()) "Campo obligatorio" else null,
            // Reemplazamos contains("@") por la validación con expresión regular
            correo = if (!EMAIL_REGEX.matches(estadoActual.correo)) "Correo Invalido" else null,
            clave = if (estadoActual.clave.length < 6) "Debe contener al menos 6 caracteres" else null,
            direccion = if (estadoActual.direccion.isBlank()) "Campo obligatorio" else null
            )
        val hayErrores = listOfNotNull(
            errores.nombres,
            errores.apellidos,
...
